--- a/registration.css
+++ b/registration.css
@@ -3,18 +3,17 @@ margin-top: 7%;
 margin-right:3%;
 margin-left:3%;
 background: url("http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/background-color-3-wallpaper/1920x1200/free-wallpaper-14.jpg") no-repeat center center fixed;
-
-
 }
-.content{
+
+.formcontent{
 padding:1%;
 }
 
-h1{
-margin-right:35%;
-
+.logoh1{
+text-indent:38%;
 }
-h4{
+
+.logoh4{
 font-style:italic;
-margin-right:55%;
+text-indent:50%;
 }
