--- a/blog.css
+++ b/blog.css
@@ -1,6 +1,6 @@
 
 body{
-background-image: url("http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/background-color-3-wallpaper/1920x1200/free-wallpaper-14.jpg") no-repeat center center fixed;
+background: url("http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/background-color-3-wallpaper/1920x1200/free-wallpaper-14.jpg") no-repeat center center fixed;
 width: 80%;
 margin-left: 30px;
 margin-right: 30px;
