--- a/blog.css
+++ b/blog.css
@@ -1,10 +1,6 @@
-
 body{
 background: url("http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/background-color-3-wallpaper/1920x1200/free-wallpaper-14.jpg") no-repeat center center fixed;
-width: 80%;
-margin-left: 30px;
-margin-right: 30px;
-margin-top:7%;
+margin: 7% 20%;
 }
 
 .logoh1{
@@ -18,6 +14,25 @@ font-style:italic;
 
 .formcontent{
 padding:1%;
+}
+a.bloglink{
+font-style: italic;
+font-weight: bold;
+font-size: 22px;
+}
+.owner{
+font-weight: bold;
+font-size: 18px;
+}
+.footer{
+position:absolute;
+bottom:5px;
+
+}
+.space{
+margin-left:2em;
+float:left;
+
 }
 
 ol{
@@ -59,7 +74,6 @@ width: 45%
 
 
 .center{
-    margin-left: auto;
-		margin-right: auto;
-		width: 70%;
+    margin: auto;
+    width: 70%;
 }
