--- a/blog.css
+++ b/blog.css
@@ -1,5 +1,5 @@
 body{
-background: url("http://www.dream-wallpaper.com/free-wallpaper/art-wallpaper/background-color-3-wallpaper/1920x1200/free-wallpaper-14.jpg") no-repeat center center fixed;
+ackground: url("gray-background.jpg") no-repeat center center fixed;
 margin: 7% 20%;
 }
 
