--- a/blog.css
+++ b/blog.css
@@ -1,5 +1,5 @@
 body{
-ackground: url("gray-background.jpg") no-repeat center center fixed;
+background: url("gray-background.jpg") no-repeat center center fixed;
 margin: 7% 20%;
 color:#151B54;
 
