--- a/blog.css
+++ b/blog.css
@@ -20,6 +20,16 @@ font-family: "Rockwell Extra Bold", "Rockwell Bold", monospace;
 padding:1%;
 }
 
+label.posttitle{
+font-family: "Rockwell Extra Bold", "Rockwell Bold", monospace;
+font-size: 16px;
+}
+
+label.postcontent{
+font-family: "Rockwell Extra Bold", "Rockwell Bold", monospace;
+font-size: 16px;
+}
+
 a.bloglink{
 font-style: italic;
 font-weight: bold;
