--- a/blog.css
+++ b/blog.css
@@ -29,7 +29,18 @@ label.postcontent{
 font-family: "Rockwell Extra Bold", "Rockwell Bold", monospace;
 font-size: 16px;
 }
+input.title{
+font-size: 20px;
+font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+font-weight: bold;
+color:#151B54;
+}
+textarea.content{
+font-size: 16px;
+font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+color:#151B54;
 
+}
 a.bloglink{
 font-style: italic;
 font-weight: bold;
