--- a/blog.css
+++ b/blog.css
@@ -20,6 +20,13 @@ font-family: "Rockwell Extra Bold", "Rockwell Bold", monospace;
 padding:1%;
 }
 
+.return{
+position:absolute;
+bottom:10px;
+text-align: center;
+
+}
+
 label.posttitle{
 font-family: "Rockwell Extra Bold", "Rockwell Bold", monospace;
 font-size: 16px;
