--- a/blog.css
+++ b/blog.css
@@ -19,7 +19,7 @@ font-family: "Rockwell Extra Bold", "Rockwell Bold", monospace;
 .formcontent{
 padding:1%;
 font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
-
+}
 
 .return{
 position:absolute;
