--- a/blog.css
+++ b/blog.css
@@ -86,6 +86,11 @@ bottom:5px;
 font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
 }
 
+.loggedin{
+font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
+text-align: center;
+}
+
 .space{
 margin-left:2em;
 float:left;
